--- a/index.html
+++ b/index.html
@@ -18,7 +18,6 @@
 <link href="/favicon.ico" rel="shortcut icon" type="image/x-icon"/>
 <link href="/assets/css/x.9d7841e705c5.css" rel="stylesheet"/>
 <link href="/assets/c.banner.v81.20260219.css" rel="stylesheet"/>
-<link href="/assets/c.hero.v76.20260219.css" rel="stylesheet"/>
 <link rel="preload" as="image" href="/img/hero_sports_1100x471.webp" imagesrcset="/img/hero_sports_1100x471.webp 1100w, /img/hero_sports_2200x942.webp 2200w" imagesizes="(max-width: 1140px) calc(100vw - 28px), 1100px">
 <link rel="preload" as="image" href="/img/hero_sports_m_1080x1350.webp" media="(max-width: 720px)">
 <script defer src="/assets/js/inline-bundles/b.fa5e828602.js"></script>
@@ -100,7 +99,7 @@
   <link href="/assets/css/vvip-luxe.v75.css?v=77" rel="stylesheet"/>
 
   <script defer src="/assets/js/vvip-global.v75.js?v=77"></script>
-<script defer src="/assets/js/j.hero.v76.20260219.js"></script>
+<script defer src="/assets/js/j.searchtyping.v83.20260219.js"></script>
 </head>
 <body>
 <h1 style="position:absolute;left:-9999px;">스포츠 배당 분석기와 배당 마진 계산기 | 88</h1>
@@ -111,11 +110,30 @@
 <div class="sub">배당을 숫자로 정리하는 가장 빠른 분석기</div>
 </div>
 <div class="section-wrap">
-<div class="mainHero mainHero--img" aria-label="메인 배너">
-  <img class="mainHeroImg" src="/img/main_banner_search88st.png" alt="구글에서 88ST.Cloud 검색 배너" decoding="async" fetchpriority="high">
+<div class="mainHero" aria-label="메인 배너">
+  <div class="heroGrid">
+    <div class="brandMark" aria-hidden="true">
+      <img class="brandImg" src="/img/brand88_masked.png" alt="">
+    </div>
+    <div class="heroCopy">
+      <h1 class="heroLead">구글에서 <span style="font-weight:1000;">88Cloud</span> 검색</h1>
+      <p class="heroSub">가장 빠른 길: 검색창에 딱 한 번만 입력하면 끝</p>
+      <div class="searchGlass" role="img" aria-label="구글 검색창 템플릿">
+        <div class="searchIcon" aria-hidden="true">
+          <!-- Google G (simple) -->
+          <svg width="26" height="26" viewBox="0 0 24 24" fill="none" aria-hidden="true">
+            <path d="M21.6 12.27c0-.71-.06-1.4-.18-2.07H12v3.92h5.38a4.6 4.6 0 0 1-1.99 3.01v2.5h3.22c1.89-1.74 2.99-4.3 2.99-7.36Z" fill="#4285F4"/>
+            <path d="M12 22c2.7 0 4.97-.9 6.63-2.44l-3.22-2.5c-.9.6-2.05.96-3.41.96-2.62 0-4.84-1.77-5.63-4.15H3.03v2.57A10 10 0 0 0 12 22Z" fill="#34A853"/>
+            <path d="M6.37 13.87A6 6 0 0 1 6.06 12c0-.65.11-1.28.31-1.87V7.56H3.03A10 10 0 0 0 2 12c0 1.61.38 3.13 1.03 4.44l3.34-2.57Z" fill="#FBBC05"/>
+            <path d="M12 5.98c1.47 0 2.79.5 3.83 1.49l2.87-2.87C16.96 2.87 14.7 2 12 2A10 10 0 0 0 3.03 7.56l3.34 2.57c.79-2.38 3.01-4.15 5.63-4.15Z" fill="#EA4335"/>
+          </svg>
+        </div>
+        <div class="searchText"><span id="searchTyping" aria-label="검색어">88Cloud</span><span class="caret" aria-hidden="true"></span></div>
+      </div>
+      <div class="searchHint">* 배너는 안내용이며 버튼/링크 없이 정적으로 노출됩니다.</div>
+    </div>
+  </div>
 </div>
-
-
 
 
 
