--- a/index.html
+++ b/index.html
@@ -18,8 +18,7 @@
 <link href="/favicon.ico" rel="shortcut icon" type="image/x-icon"/>
 <link href="/assets/css/x.9d7841e705c5.css" rel="stylesheet"/>
 <link href="/assets/c.banner.v81.20260219.css" rel="stylesheet"/>
-<link rel="preload" as="image" href="/img/hero_sports_1100x471.webp" imagesrcset="/img/hero_sports_1100x471.webp 1100w, /img/hero_sports_2200x942.webp 2200w" imagesizes="(max-width: 1140px) calc(100vw - 28px), 1100px">
-<link rel="preload" as="image" href="/img/hero_sports_m_1080x1350.webp" media="(max-width: 720px)">
+
 <script defer src="/assets/js/inline-bundles/b.fa5e828602.js"></script>
 <script type="application/ld+json">
 {
@@ -67,7 +66,7 @@
 <script defer="" src="/assets/js/j.efba3509e62c.js"></script>
 <link href="/assets/c.a50dd3bc5b33.css" rel="stylesheet"/>
 <script defer="" src="/assets/js/j.8829a3ccde44.js?v=77"></script>
-<meta content="https://88st.cloud/img/logo.png" property="og:image"/>
+<meta content="https://88st.cloud/img/brand88_masked.png" property="og:image"/>
 <script type="application/ld+json">
 {
   "@context": "https://schema.org",
@@ -80,7 +79,7 @@
       "url": "https://88st.cloud/",
       "logo": {
         "@type": "ImageObject",
-        "url": "https://88st.cloud/img/logo.png"
+        "url": "https://88st.cloud/img/brand88_masked.png"
       }
     },
     {
@@ -116,7 +115,7 @@
       <img class="brandImg" src="/img/brand88_masked.png" alt="">
     </div>
     <div class="heroCopy">
-      <h1 class="heroLead">구글에서 <span style="font-weight:1000;">88Cloud</span> 검색</h1>
+      <h1 class="heroLead">구글에서 <span style="font-weight:1000;">88ST.Cloud</span> 검색</h1>
       <p class="heroSub">가장 빠른 길: 검색창에 딱 한 번만 입력하면 끝</p>
       <div class="searchGlass" role="img" aria-label="구글 검색창 템플릿">
         <div class="searchIcon" aria-hidden="true">
@@ -128,10 +127,9 @@
             <path d="M12 5.98c1.47 0 2.79.5 3.83 1.49l2.87-2.87C16.96 2.87 14.7 2 12 2A10 10 0 0 0 3.03 7.56l3.34 2.57c.79-2.38 3.01-4.15 5.63-4.15Z" fill="#EA4335"/>
           </svg>
         </div>
-        <div class="searchText"><span id="searchTyping" aria-label="검색어">88Cloud</span><span class="caret" aria-hidden="true"></span></div>
+        <div class="searchText"><span id="searchTyping" aria-label="검색어">88ST.Cloud</span><span class="caret" aria-hidden="true"></span></div>
       </div>
-      <div class="searchHint">* 배너는 안내용이며 버튼/링크 없이 정적으로 노출됩니다.</div>
-    </div>
+</div>
   </div>
 </div>
 
