--- a/calc/index.html
+++ b/calc/index.html
@@ -22,59 +22,16 @@
 <body>
   <div id="shell"></div>
 
-  <main class="st-app">
-    <div class="page">
-      <div class="section-wrap">
-        <div class="section">
-          <div class="hero">
-            <div class="hero-badge">TOOLS</div>
-            <h1 class="hero-title">계산기/분석기 모음</h1>
-            <p class="hero-sub">가장 많이 쓰는 도구만 깔끔하게 모았습니다. (PC/모바일 동일 UX)</p>
-          </div>
-
-          <div class="quick-links" style="margin-top:14px">
-            <a class="quick-link" href="/tool-ev/">
-              <span class="ql-title">EV 계산기</span>
-              <span class="ql-desc">기대값/손익 분기점</span>
-            </a>
-            <a class="quick-link" href="/tool-margin/">
-              <span class="ql-title">마진 분석기</span>
-              <span class="ql-desc">오즈 마진/비교</span>
-            </a>
-            <a class="quick-link" href="/tool-odds/">
-              <span class="ql-title">배당 변환</span>
-              <span class="ql-desc">HK/Decimal/US</span>
-            </a>
-            <a class="quick-link" href="/kelly/">
-              <span class="ql-title">켈리 계산기</span>
-              <span class="ql-desc">배팅 사이징</span>
-            </a>
-            <a class="quick-link" href="/tool-casino/">
-              <span class="ql-title">카지노 분석기</span>
-              <span class="ql-desc">EVO·슈 트래커</span>
-            </a>
-            <a class="quick-link" href="/tool-slot/">
-              <span class="ql-title">슬롯 분석기</span>
-              <span class="ql-desc">Pragmatic DB·즐겨찾기</span>
-            </a>
-            <a class="quick-link" href="/tool-minigame/">
-              <span class="ql-title">미니게임 분석기</span>
-              <span class="ql-desc">연속/세션 리스크</span>
-            </a>
-            <a class="quick-link" href="/cert/">
-              <span class="ql-title">인증 사이트</span>
-              <span class="ql-desc">검증·가이드</span>
-            </a>
-          </div>
-
-          <div class="card" style="margin-top:14px">
-            <div class="card-title">TIP</div>
-            <div class="card-body">도구는 모두 <b>로컬(브라우저)</b>에서 동작하며, 입력값/히스토리는 기기 내 저장입니다.</div>
-          </div>
-        </div>
+  <main class="content">
+  <section class="section">
+    <div class="card" style="padding:18px 16px;border:1px solid rgba(15,23,42,.10);border-radius:16px;background:#fff;">
+      <div style="font-weight:1000;font-size:16px;margin-bottom:6px;">계산기 홈</div>
+      <div style="font-weight:850;color:rgba(15,23,42,.65);font-size:13px;line-height:1.55;">
+        상단 메뉴에서 원하는 항목을 선택해 이용하세요.
       </div>
     </div>
-  </main>
+  </section>
+</main>
 
   <script defer src="/assets/js/j.8829a3ccde44.js?v=77"></script>
   <script defer src="/assets/js/j.9179477b9417.js"></script>
