--- a/guide/index.html
+++ b/guide/index.html
@@ -22,51 +22,16 @@
 <body>
   <div id="shell"></div>
 
-  <main class="st-app">
-    <div class="page">
-      <div class="section-wrap">
-        <div class="section">
-          <div class="hero">
-            <div class="hero-badge">GUIDE</div>
-            <h1 class="hero-title">가이드 모음</h1>
-            <p class="hero-sub">처음 방문자도 바로 이해할 수 있게 핵심만 정리했습니다.</p>
-          </div>
-
-          <div class="quick-links" style="margin-top:14px">
-            <a class="quick-link" href="/bonus-checklist/">
-              <span class="ql-title">보너스 체크리스트</span>
-              <span class="ql-desc">약관/롤오버/리스크</span>
-            </a>
-            <a class="quick-link" href="/casino/">
-              <span class="ql-title">카지노 가이드</span>
-              <span class="ql-desc">기본 룰·주의사항</span>
-            </a>
-            <a class="quick-link" href="/casino-strategy/">
-              <span class="ql-title">카지노 전략</span>
-              <span class="ql-desc">세션 관리·실전 팁</span>
-            </a>
-            <a class="quick-link" href="/slot/">
-              <span class="ql-title">슬롯 가이드</span>
-              <span class="ql-desc">RTP/변동성 이해</span>
-            </a>
-            <a class="quick-link" href="/minigame/">
-              <span class="ql-title">미니게임 가이드</span>
-              <span class="ql-desc">연속/변동·손절</span>
-            </a>
-            <a class="quick-link" href="/fortune/">
-              <span class="ql-title">운세</span>
-              <span class="ql-desc">오늘의 브리핑</span>
-            </a>
-          </div>
-
-          <div class="card" style="margin-top:14px">
-            <div class="card-title">주의</div>
-            <div class="card-body">가이드는 정보 제공 목적이며, 과몰입/무리한 베팅은 금물입니다.</div>
-          </div>
-        </div>
+  <main class="content">
+  <section class="section">
+    <div class="card" style="padding:18px 16px;border:1px solid rgba(15,23,42,.10);border-radius:16px;background:#fff;">
+      <div style="font-weight:1000;font-size:16px;margin-bottom:6px;">가이드 홈</div>
+      <div style="font-weight:850;color:rgba(15,23,42,.65);font-size:13px;line-height:1.55;">
+        상단 메뉴에서 원하는 항목을 선택해 이용하세요.
       </div>
     </div>
-  </main>
+  </section>
+</main>
 
   <script defer src="/assets/js/j.8829a3ccde44.js?v=77"></script>
   <script defer src="/assets/js/j.9179477b9417.js"></script>
