--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 <script defer="" src="/assets/js/j.efba3509e62c.js"></script>
 <link href="/assets/c.a50dd3bc5b33.css" rel="stylesheet"/>
 <script defer="" src="/assets/js/j.8829a3ccde44.js?v=77"></script>
-<meta content="https://88st.cloud/img/brand88_masked.png" property="og:image"/>
+<meta content="https://88st.cloud/img/logo.png" property="og:image"/>
 <script type="application/ld+json">
 {
   "@context": "https://schema.org",
@@ -79,7 +79,7 @@
       "url": "https://88st.cloud/",
       "logo": {
         "@type": "ImageObject",
-        "url": "https://88st.cloud/img/brand88_masked.png"
+        "url": "https://88st.cloud/img/logo.png"
       }
     },
     {
@@ -102,12 +102,17 @@
 </head>
 <body>
 <h1 style="position:absolute;left:-9999px;">스포츠 배당 분석기와 배당 마진 계산기 | 88</h1>
+<div class="header">
+<a aria-label="홈으로 이동" class="logoLink" href="/">
+<img alt="88 커뮤니티 로고" class="logoImg" src="img/logo.png"/>
+</a>
+<div class="sub">배당을 숫자로 정리하는 가장 빠른 분석기</div>
 </div>
 <div class="section-wrap">
 <div class="mainHero" aria-label="메인 배너">
   <div class="heroGrid">
     <div class="brandMark" aria-hidden="true">
-      <img class="brandImg" src="/img/brand88_masked.png" alt="">
+      <img class="brandImg" src="/img/logo.png" alt="">
     </div>
     <div class="heroCopy">
       <h1 class="heroLead">구글에서 <span style="font-weight:1000;">88ST.Cloud</span> 검색</h1>
