--- a/guide/index.html
+++ b/guide/index.html
@@ -7,15 +7,16 @@
   <meta name="description" content="보너스 체크리스트, 카지노/슬롯/미니게임 기본 가이드와 실전 체크 포인트." />
   <link rel="canonical" href="https://88st.cloud/guide/" />
 
-  <link rel="stylesheet" href="/assets/css/x.e28fb3b19400.css" />
-  <link rel="stylesheet" href="/assets/c.9995f585c8ff.css" />
-  <link rel="stylesheet" href="/assets/c.0b319f0dba4a.css" />
-  <link rel="stylesheet" href="/assets/c.a50dd3c3eb6a.css" />
-  <link rel="stylesheet" href="/assets/c.home.v62.20260217.css" />
+  <link rel="stylesheet" href="/assets/css/x.e28fb3ebcc4c.css" />
+  <script defer src="/assets/js/j.9179477b9417.js"></script>
+  <link rel="stylesheet" href="/assets/c.9995eeb5cf82.css" />
+  <link rel="stylesheet" href="/assets/c.0b3d8a45f8c9.css" />
+  <link rel="stylesheet" href="/assets/c.a50dd3bc5b33.css" />
 
   <meta name="theme-color" content="#0b0c10" />
 
   <link href="/assets/css/vvip-luxe.v75.css?v=77" rel="stylesheet"/>
+  <link href="/assets/css/vvip-hub.v85.css?v=85" rel="stylesheet"/>
 
   <script defer src="/assets/js/vvip-global.v75.js?v=77"></script>
 </head>
@@ -23,52 +24,88 @@
   <div id="shell"></div>
 
   <main class="st-app">
-    <div class="page">
-      <div class="section-wrap">
-        <div class="section">
-          <div class="hero">
-            <div class="hero-badge">GUIDE</div>
-            <h1 class="hero-title">가이드 모음</h1>
-            <p class="hero-sub">처음 방문자도 바로 이해할 수 있게 핵심만 정리했습니다.</p>
-          </div>
-
-          <div class="quick-links" style="margin-top:14px">
-            <a class="quick-link" href="/bonus-checklist/">
-              <span class="ql-title">보너스 체크리스트</span>
-              <span class="ql-desc">약관/롤오버/리스크</span>
-            </a>
-            <a class="quick-link" href="/casino/">
-              <span class="ql-title">카지노 가이드</span>
-              <span class="ql-desc">기본 룰·주의사항</span>
-            </a>
-            <a class="quick-link" href="/casino-strategy/">
-              <span class="ql-title">카지노 전략</span>
-              <span class="ql-desc">세션 관리·실전 팁</span>
-            </a>
-            <a class="quick-link" href="/slot/">
-              <span class="ql-title">슬롯 가이드</span>
-              <span class="ql-desc">RTP/변동성 이해</span>
-            </a>
-            <a class="quick-link" href="/minigame/">
-              <span class="ql-title">미니게임 가이드</span>
-              <span class="ql-desc">연속/변동·손절</span>
-            </a>
-            <a class="quick-link" href="/fortune/">
-              <span class="ql-title">운세</span>
-              <span class="ql-desc">오늘의 브리핑</span>
-            </a>
-          </div>
-
-          <div class="card" style="margin-top:14px">
-            <div class="card-title">주의</div>
-            <div class="card-body">가이드는 정보 제공 목적이며, 과몰입/무리한 베팅은 금물입니다.</div>
-          </div>
+    <div class="hub">
+      <section class="hub-hero">
+        <div>
+          <div class="hero-badge">GUIDE CENTER</div>
+          <h1>가이드</h1>
+          <p>초보는 <b>요약</b>으로 빠르게, 숙련자는 <b>PRO(근거·세부룰)</b>로 깊게 — 실수 줄이는 체크 포인트만 모았습니다.</p>
         </div>
+        <div class="hub-actions">
+          <a class="hub-btn primary" href="/calc/">계산기 홈</a>
+          <a class="hub-btn" href="/cert/">인증사이트</a>
+          <a class="hub-btn" href="https://t.me/UZU59" target="_blank" rel="noopener">텔레그램 문의</a>
+        </div>
+      </section>
+
+      <section class="hub-section">
+        <div class="hub-head">
+          <h2>바로 시작</h2>
+          <div class="sub">"내 픽"을 더 확신 있게 만드는 5종 분석기</div>
+        </div>
+        <div class="hub-grid">
+          <a class="hub-card" href="/analysis/">
+            <div class="top"><div class="hub-ic">⚽</div><div><div class="ttl">스포츠 분석기</div><div class="desc">오버라운드·공정배당·오즈무브·리스크</div></div></div>
+            <div class="meta"><span class="hub-pill">AI 브리핑</span><span class="hub-go">열기 →</span></div>
+          </a>
+          <a class="hub-card" href="/tool-virtual/">
+            <div class="top"><div class="hub-ic">🎮</div><div><div class="ttl">BET365 가상게임</div><div class="desc">배당 기반 승리 확률·O/U + 주의 태그</div></div></div>
+            <div class="meta"><span class="hub-pill">전종목</span><span class="hub-go">열기 →</span></div>
+          </a>
+          <a class="hub-card" href="/tool-minigame/">
+            <div class="top"><div class="hub-ic">🧩</div><div><div class="ttl">미니게임 분석기</div><div class="desc">최근 20 기반 다음 확률 + 경고 룰</div></div></div>
+            <div class="meta"><span class="hub-pill">다음 확률</span><span class="hub-go">열기 →</span></div>
+          </a>
+          <a class="hub-card" href="/tool-casino/">
+            <div class="top"><div class="hub-ic">🃏</div><div><div class="ttl">카지노 분석기</div><div class="desc">하우스엣지·세션리스크 + 슈 트래커</div></div></div>
+            <div class="meta"><span class="hub-pill">세션 관리</span><span class="hub-go">열기 →</span></div>
+          </a>
+          <a class="hub-card" href="/tool-slot/">
+            <div class="top"><div class="hub-ic">🎰</div><div><div class="ttl">슬롯 분석기</div><div class="desc">RTP/변동성·맥스윈·DB 체크 + 즐겨찾기</div></div></div>
+            <div class="meta"><span class="hub-pill">RTP DB</span><span class="hub-go">열기 →</span></div>
+          </a>
+        </div>
+      </section>
+
+      <section class="hub-section">
+        <div class="hub-head">
+          <h2>체크리스트 & 운영 가이드</h2>
+          <div class="sub">약관/롤링/세션/리스크 — 기준을 세우는 문서</div>
+        </div>
+        <div class="hub-grid cols-3">
+          <a class="hub-card" href="/bonus-checklist/">
+            <div class="top"><div class="hub-ic">✅</div><div><div class="ttl">보너스 체크리스트</div><div class="desc">롤링/제외게임/출금규정 10초 점검</div></div></div>
+            <div class="meta"><span class="hub-pill">필수</span><span class="hub-go">열기 →</span></div>
+          </a>
+          <a class="hub-card" href="/casino/">
+            <div class="top"><div class="hub-ic">♠</div><div><div class="ttl">카지노 가이드</div><div class="desc">기본 룰·운영 팁·주의 포인트</div></div></div>
+            <div class="meta"><span class="hub-pill">운영</span><span class="hub-go">열기 →</span></div>
+          </a>
+          <a class="hub-card" href="/casino-strategy/">
+            <div class="top"><div class="hub-ic">🧭</div><div><div class="ttl">카지노 전략 모음</div><div class="desc">달랑베르/파롤리/마틴 등 전략 페이지</div></div></div>
+            <div class="meta"><span class="hub-pill">전략</span><span class="hub-go">열기 →</span></div>
+          </a>
+          <a class="hub-card" href="/slot/">
+            <div class="top"><div class="hub-ic">🎯</div><div><div class="ttl">슬롯 가이드</div><div class="desc">RTP/변동성/보너스 구간 이해</div></div></div>
+            <div class="meta"><span class="hub-pill">지표</span><span class="hub-go">열기 →</span></div>
+          </a>
+          <a class="hub-card" href="/minigame/">
+            <div class="top"><div class="hub-ic">🧠</div><div><div class="ttl">미니게임 가이드</div><div class="desc">연속/편차 해석 + 피해야 할 구간</div></div></div>
+            <div class="meta"><span class="hub-pill">주의</span><span class="hub-go">열기 →</span></div>
+          </a>
+          <a class="hub-card" href="/ipl/">
+            <div class="top"><div class="hub-ic">🏏</div><div><div class="ttl">IPL 가이드</div><div class="desc">리그/기본 룰 + 분석 체크</div></div></div>
+            <div class="meta"><span class="hub-pill">리그</span><span class="hub-go">열기 →</span></div>
+          </a>
+        </div>
+      </section>
+
+      <div class="hub-note">
+        <b>주의</b> · 가이드는 정보 제공 목적이며, 과몰입/무리한 베팅은 금물입니다. 도구 결과는 “예측”이 아니라 <b>리스크/기준</b>을 세우는 지표로 사용하세요.
       </div>
     </div>
   </main>
 
-  <script defer src="/assets/js/j.8829a3ccde44.js?v=77"></script>
-  <script defer src="/assets/js/j.9179477b9417.js"></script>
+  <script defer src="/assets/js/j.8829a3ccde44.js?v=85"></script>
 </body>
 </html>
