--- a/calc/index.html
+++ b/calc/index.html
@@ -7,15 +7,16 @@
   <meta name="description" content="스포츠·카지노·슬롯·미니게임 분석 도구 모음. EV/마진/배당/켈리/슈 트래커/슬롯 환수율 DB." />
   <link rel="canonical" href="https://88st.cloud/calc/" />
 
-  <link rel="stylesheet" href="/assets/css/x.e28fb3b19400.css" />
-  <link rel="stylesheet" href="/assets/c.9995f585c8ff.css" />
-  <link rel="stylesheet" href="/assets/c.0b319f0dba4a.css" />
-  <link rel="stylesheet" href="/assets/c.a50dd3c3eb6a.css" />
-  <link rel="stylesheet" href="/assets/c.home.v62.20260217.css" />
+  <link rel="stylesheet" href="/assets/css/x.e28fb3ebcc4c.css" />
+  <script defer src="/assets/js/j.9179477b9417.js"></script>
+  <link rel="stylesheet" href="/assets/c.9995eeb5cf82.css" />
+  <link rel="stylesheet" href="/assets/c.0b3d8a45f8c9.css" />
+  <link rel="stylesheet" href="/assets/c.a50dd3bc5b33.css" />
 
   <meta name="theme-color" content="#0b0c10" />
 
   <link href="/assets/css/vvip-luxe.v75.css?v=77" rel="stylesheet"/>
+  <link href="/assets/css/vvip-hub.v85.css?v=85" rel="stylesheet"/>
 
   <script defer src="/assets/js/vvip-global.v75.js?v=77"></script>
 </head>
@@ -23,60 +24,122 @@
   <div id="shell"></div>
 
   <main class="st-app">
-    <div class="page">
-      <div class="section-wrap">
-        <div class="section">
-          <div class="hero">
-            <div class="hero-badge">TOOLS</div>
-            <h1 class="hero-title">계산기/분석기 모음</h1>
-            <p class="hero-sub">가장 많이 쓰는 도구만 깔끔하게 모았습니다. (PC/모바일 동일 UX)</p>
-          </div>
-
-          <div class="quick-links" style="margin-top:14px">
-            <a class="quick-link" href="/tool-ev/">
-              <span class="ql-title">EV 계산기</span>
-              <span class="ql-desc">기대값/손익 분기점</span>
-            </a>
-            <a class="quick-link" href="/tool-margin/">
-              <span class="ql-title">마진 분석기</span>
-              <span class="ql-desc">오즈 마진/비교</span>
-            </a>
-            <a class="quick-link" href="/tool-odds/">
-              <span class="ql-title">배당 변환</span>
-              <span class="ql-desc">HK/Decimal/US</span>
-            </a>
-            <a class="quick-link" href="/kelly/">
-              <span class="ql-title">켈리 계산기</span>
-              <span class="ql-desc">배팅 사이징</span>
-            </a>
-            <a class="quick-link" href="/tool-casino/">
-              <span class="ql-title">카지노 분석기</span>
-              <span class="ql-desc">EVO·슈 트래커</span>
-            </a>
-            <a class="quick-link" href="/tool-slot/">
-              <span class="ql-title">슬롯 분석기</span>
-              <span class="ql-desc">Pragmatic DB·즐겨찾기</span>
-            </a>
-            <a class="quick-link" href="/tool-minigame/">
-              <span class="ql-title">미니게임 분석기</span>
-              <span class="ql-desc">연속/세션 리스크</span>
-            </a>
-            <a class="quick-link" href="/cert/">
-              <span class="ql-title">인증 사이트</span>
-              <span class="ql-desc">검증·가이드</span>
-            </a>
-          </div>
-
-          <div class="card" style="margin-top:14px">
-            <div class="card-title">TIP</div>
-            <div class="card-body">도구는 모두 <b>로컬(브라우저)</b>에서 동작하며, 입력값/히스토리는 기기 내 저장입니다.</div>
-          </div>
+    <div class="hub">
+      <section class="hub-hero">
+        <div>
+          <div class="hero-badge">CALC HOME</div>
+          <h1>계산기 홈</h1>
+          <p>도구를 찾느라 헤매지 않게, <b>분석기 5종</b> + <b>계산기</b> + <b>가이드</b>를 한 화면에 정리했습니다.</p>
         </div>
+        <div class="hub-actions">
+          <a class="hub-btn primary" href="/analysis/">스포츠 분석기</a>
+          <a class="hub-btn" href="/cert/">인증사이트</a>
+          <a class="hub-btn" href="https://t.me/UZU59" target="_blank" rel="noopener">텔레그램 문의</a>
+        </div>
+      </section>
+
+      <section class="hub-section">
+        <div class="hub-head">
+          <h2>분석기 바로가기</h2>
+          <div class="sub">초보는 요약 / 숙련자는 PRO(접기)로 근거까지</div>
+        </div>
+        <div class="hub-grid">
+          <a class="hub-card" href="/analysis/">
+            <div class="top">
+              <div class="hub-ic">⚽</div>
+              <div>
+                <div class="ttl">스포츠 분석기</div>
+                <div class="desc">오버라운드·공정배당·오즈무브·리스크 브리핑</div>
+              </div>
+            </div>
+            <div class="meta"><span class="hub-pill">AI 브리핑</span><span class="hub-go">바로가기 →</span></div>
+          </a>
+
+          <a class="hub-card" href="/tool-virtual/">
+            <div class="top">
+              <div class="hub-ic">🎮</div>
+              <div>
+                <div class="ttl">BET365 가상게임</div>
+                <div class="desc">배당 기반 승리 확률·O/U 분석 + 주의 태그</div>
+              </div>
+            </div>
+            <div class="meta"><span class="hub-pill">전종목</span><span class="hub-go">바로가기 →</span></div>
+          </a>
+
+          <a class="hub-card" href="/tool-minigame/">
+            <div class="top">
+              <div class="hub-ic">🧩</div>
+              <div>
+                <div class="ttl">미니게임 분석기</div>
+                <div class="desc">최근 20기반 다음 확률 + 연속/편차 경고 태깅</div>
+              </div>
+            </div>
+            <div class="meta"><span class="hub-pill">다음 확률</span><span class="hub-go">바로가기 →</span></div>
+          </a>
+
+          <a class="hub-card" href="/tool-casino/">
+            <div class="top">
+              <div class="hub-ic">🃏</div>
+              <div>
+                <div class="ttl">카지노 분석기</div>
+                <div class="desc">하우스엣지/세션리스크 + 슈 트래커(20/50/100)</div>
+              </div>
+            </div>
+            <div class="meta"><span class="hub-pill">슈 트래커</span><span class="hub-go">바로가기 →</span></div>
+          </a>
+
+          <a class="hub-card" href="/tool-slot/">
+            <div class="top">
+              <div class="hub-ic">🎰</div>
+              <div>
+                <div class="ttl">슬롯 분석기</div>
+                <div class="desc">RTP/변동성·맥스윈·DB 기반 체크 + 즐겨찾기</div>
+              </div>
+            </div>
+            <div class="meta"><span class="hub-pill">RTP DB</span><span class="hub-go">바로가기 →</span></div>
+          </a>
+        </div>
+      </section>
+
+      <section class="hub-section">
+        <div class="hub-head">
+          <h2>계산기 바로가기</h2>
+          <div class="sub">확률·마진·EV·사이징을 한 번에</div>
+        </div>
+        <div class="hub-grid cols-3">
+          <a class="hub-card" href="/tool-margin/">
+            <div class="top"><div class="hub-ic">📉</div><div><div class="ttl">마진 계산기</div><div class="desc">오버라운드/마진을 즉시 계산</div></div></div>
+            <div class="meta"><span class="hub-pill">Overround</span><span class="hub-go">열기 →</span></div>
+          </a>
+          <a class="hub-card" href="/tool-ev/">
+            <div class="top"><div class="hub-ic">📈</div><div><div class="ttl">EV 계산기</div><div class="desc">기대값·손익분기점 기준 판단</div></div></div>
+            <div class="meta"><span class="hub-pill">Expected Value</span><span class="hub-go">열기 →</span></div>
+          </a>
+          <a class="hub-card" href="/tool-odds/">
+            <div class="top"><div class="hub-ic">🔁</div><div><div class="ttl">배당↔확률</div><div class="desc">HK/Decimal/US 변환 + 확률</div></div></div>
+            <div class="meta"><span class="hub-pill">Implied</span><span class="hub-go">열기 →</span></div>
+          </a>
+          <a class="hub-card" href="/tool/fair-odds/">
+            <div class="top"><div class="hub-ic">🎯</div><div><div class="ttl">공정배당</div><div class="desc">비그 제거(무비그)로 공정 라인</div></div></div>
+            <div class="meta"><span class="hub-pill">De-vig</span><span class="hub-go">열기 →</span></div>
+          </a>
+          <a class="hub-card" href="/tool/kelly/">
+            <div class="top"><div class="hub-ic">🧠</div><div><div class="ttl">Kelly 비중</div><div class="desc">자본 대비 추천 배팅 사이징</div></div></div>
+            <div class="meta"><span class="hub-pill">Sizing</span><span class="hub-go">열기 →</span></div>
+          </a>
+          <a class="hub-card" href="/guide/">
+            <div class="top"><div class="hub-ic">📚</div><div><div class="ttl">가이드 모음</div><div class="desc">입플/전략/기본 룰·주의</div></div></div>
+            <div class="meta"><span class="hub-pill">Guide</span><span class="hub-go">열기 →</span></div>
+          </a>
+        </div>
+      </section>
+
+      <div class="hub-note">
+        <b>안내</b> · 본 도구는 참고용이며, 모든 계산/브리핑은 과몰입 방지와 리스크 점검을 위한 지표입니다. 입력 데이터(배당/결과)는 <b>브라우저 로컬</b>에서 처리됩니다.
       </div>
     </div>
   </main>
 
-  <script defer src="/assets/js/j.8829a3ccde44.js?v=77"></script>
-  <script defer src="/assets/js/j.9179477b9417.js"></script>
+  <script defer src="/assets/js/j.8829a3ccde44.js?v=85"></script>
 </body>
 </html>
