--- a/cert/index.html
+++ b/cert/index.html
@@ -127,10 +127,23 @@
 <div class="line" id="pBenefit" style="display:none;"></div>
 <div class="line" id="pNotice" style="display:none;"></div>
 </div>
-<div class="popup-actions">
+
+        <div class="popup-check" id="pChecklist">
+          <div class="popup-check-head">
+            <div class="t">가입 전 체크리스트</div>
+            <button class="mini" id="pCheckAll" type="button">모두 체크</button>
+          </div>
+          <label class="ck"><input type="checkbox" class="pChk" data-ck="rules"/> 롤링/제외게임/출금 규정 확인</label>
+          <label class="ck"><input type="checkbox" class="pChk" data-ck="limit"/> 최대지급/환전속도/제한 확인</label>
+          <label class="ck"><input type="checkbox" class="pChk" data-ck="support"/> 고객센터/문의채널 정상 확인</label>
+          <div class="hint">모두 체크하면 <b>사이트 이동</b> 버튼이 활성화됩니다.</div>
+          <div class="ok" id="pCheckOk" style="display:none;">체크 완료 ✓</div>
+        </div>
+
+      <div class="popup-actions">
 <button class="btn" id="copyBtn">코드 복사</button>
 <button class="btn" id="shareBtn">링크 복사</button>
-<a class="btn primary" data-no-auto-outbound="1" data-outbound-manual="1" href="#" id="pLink" rel="noopener noreferrer" target="_blank">사이트 이동</a>
+<a class="btn primary is-disabled" aria-disabled="true" tabindex="-1" data-no-auto-outbound="1" data-outbound-manual="1" href="#" id="pLink" rel="noopener noreferrer" target="_blank">사이트 이동</a>
 <a class="btn" data-no-auto-outbound="1" data-outbound-manual="1" href="https://t.me/UZU59" id="pTelegram" rel="noopener noreferrer" target="_blank">문의 (텔레그램)</a>
 <button class="btn" id="favBtn">☆ 즐겨찾기</button>
 </div>
