--- a/casino-strategy/oscar-grind/index.html
+++ b/casino-strategy/oscar-grind/index.html
@@ -91,6 +91,16 @@
 <details><summary>세션/자금 관리 트래커는 뭘 보여주나요?</summary><div class="st-land-note" style="margin-top:8px;">세션 손익(P/L), 최대 낙폭(MDD), 현재 단계와 최근 라운드 로그를 통해 현재 위험도를 한눈에 보여줍니다.</div></details>
 <details><summary>이 전략은 수익을 보장하나요?</summary><div class="st-land-note" style="margin-top:8px;">어떤 배팅기법도 수익을 보장하지 않습니다. 변동성과 한도/규정/커미션 등의 변수가 크므로 책임감 있게 이용해 주세요.</div></details>
 </section>
+
+        <section class="st-land-card" id="vvipRunTool">
+          <h2>관련 도구 바로 실행</h2>
+          <p class="st-land-note">읽은 내용을 바로 계산기로 연결하세요. <b>최근 입력 자동 저장/1클릭 복원</b>도 지원합니다.</p>
+          <div class="st-land-cta">
+            <a class="st-land-btn primary" href="/tool-casino/#oscar">오스카 그라인드 계산기 열기</a>
+            <a class="st-land-btn" href="/tool-casino/">카지노 전략 계산기</a>
+          </div>
+        </section>
+
 </div>
 </main>
 <script defer="" src="/assets/js/j.025d649c8b11.js"></script>
