--- a/tool-slot/index.html
+++ b/tool-slot/index.html
@@ -110,7 +110,7 @@
 
 <div class="sl-tabs" id="slTabs" role="tablist" aria-label="슬롯 도구 탭">
   <button class="sl-tab on" type="button" data-tab="calc" aria-selected="true">RTP 계산</button>
-  <button class="sl-tab" type="button" data-tab="db" aria-selected="false">슬롯 DB (Pragmatic)</button>
+  <button class="sl-tab" type="button" data-tab="db" aria-selected="false">슬롯 DB </button>
   <button class="sl-tab" type="button" data-tab="session" aria-selected="false">세션 기록</button>
 </div>
 
